2010-04-05  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14003: "Check for extension updates" does not always find latest version

2010-04-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13487: No alternative icon returned from 'getIcon' (thanks to Stephan Kellermayr)
	* Fixed bug #13486: Wrong icon-state returned from 'getIcon' (thanks to Stephan Kellermayr)

2010-04-03  Francois Suter  <francois@typo3.org>

	* Fixed bug #13625: tx_scheduler_TestTask fails to execute successfully due to missing mail initialization (thanks to Marc Bastian Heinrichs)

2010-04-01  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #13557: t3editor/codecompletion: add new typoscript properties and update tsref descriptions

2010-04-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13980: PageRenderer renderJsLibraries should be after the hook

2010-03-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13011: Bug: borders for single image rendering [css styled content] (thanks to Susanne Moog)
	* Fixed bug #11386: t3lib_cache_backend_FileBacked violates open_basedir_restrictions

2010-03-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13935: t3lib_fullsearch has a lot of hanging SQL record sets

2010-03-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #11696: External files with Umlauts/special chars in filename are not indexed
	* Fixed bug #12375: typo3temp got filled with thousands of EXTERNAL_URL* files
	* Fixed bug #1436: Meta tag output in indexed search result breaks layout

2010-03-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13677: margin-bottom on images was missing in the "single image" rendering (thanks to Susanne Moog)

2010-03-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13273: Improve caching framework dbBackend testcase to catch not deleted rows in tag table
	* Fixed bug #13273: Caching framework sub-select is slow because mysql does not use indexes on outer query
