@@ -1,3 +1,7 @@
+2010-04-05  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14004: htmlArea RTE: Applying color or font repeatedly produces nested span elements
+
 2010-04-05  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #14003: "Check for extension updates" does not always find latest version
